# personal-agent

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
agents/receipt_analyzer/: __main__.py  agent.py  graph.py  manager.py  prompts.py  schemas.py  staging.py  storage.py  watcher.py
api/: __init__.py  image.py  main.py  models.py
api/routers/: expenses.py  receipts.py
docs/: developer-guide.md  evals-plan.md
evals/: conftest.py
evals/e2e/: test_api_expenses.py  test_api_staging.py  test_api_upload.py  test_watcher_e2e.py
evals/fixtures/: receipt_data.py
evals/integration/: test_manager.py  test_pipeline_mock.py  test_staging_workflow.py
evals/judges/: extraction_judge.py  prompts.py
evals/live/: conftest.py  test_llm_extraction.py  test_llm_validation.py
evals/unit/: test_detect_file_type.py  test_duplicate_check.py  test_schemas.py  test_staging_helpers.py  test_storage.py
orchestrator/: router.py
shared/config/: settings.py
shared/graph/: base_agent.py
shared/llm/: base.py  factory.py
shared/notifications/: base.py
shared/storage/: database.py  models.py
ui/: app.py
ui/static/: app.js  index.html
