[project]
name = "personal-agent"
version = "0.1.0"
description = "Multi-agent personal assistant"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-openai>=1.1.0",
    "deepagents>=0.4.0",
    "langsmith>=0.7.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "Pillow>=10.0",
    "pillow-heif>=1.0",
    "pypdf>=4.0",
    "streamlit>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "watchdog>=4.0",
]

[project.scripts]
receipt-watcher = "agents.receipt_analyzer.watcher:run_watcher"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "agents*", "orchestrator*", "ui*", "api*"]

[tool.coverage.run]
source = ["agents", "api", "shared"]
omit = ["*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
testpaths = ["evals"]
markers = [
    "unit: Fast unit tests (no LLM, no API)",
    "integration: Integration tests with mocked LLM",
    "e2e: End-to-end API tests with mocked LLM",
    "live: Live LLM tests with judge (requires API key, slow)",
    "watcher: File watcher tests",
]
addopts = "-m 'not live' -v --cov --cov-report=term-missing"

[tool.ruff]
line-length = 100
